# Mr.AITrades

./: Cargo.toml  README.md  backtesting  deploy  run_strategy.py  strategy.py
core/: execution
core/data_feed/: Cargo.toml
core/data_feed/src/: data_feed.rs  lib.rs  mod.rs
core/inference/: __init__.py  exchange_adapter_stub.py  order_executor.py  order_executor_stub.py  receiver.py  requirements.txt  runner.py  signal_engine.py  test_engine.py  test_receiver.py
core/inference/adapters/: shared_mem.py
core/inference/engine/: core.py
core/inference/tests/: test_latency.py  test_throughput.py
core/risk/: risk.py  test_risk.py
libs/exchange_adapter/: Cargo.toml  tick.fbs
libs/exchange_adapter/benches/: perf_harness.rs
libs/exchange_adapter/src/: binance_ingest.rs  binance_ws.rs  cpu_affinity.rs  ffi.rs  ffi_ring.rs  flatbuf_decoder.rs  io_uring_adapter.rs  lib.rs  order_book.rs  socket.rs  tick_generated.rs
libs/exchange_adapter/tests/: integration_test.rs  parse_test.rs
libs/fix_engine/: Cargo.toml
libs/fix_engine/src/: lib.rs
libs/fix_engine/tests/: integration_test.rs
libs/io_uring/: Cargo.toml
libs/io_uring/src/: lib.rs  order_generated.rs
libs/market_data/: Cargo.toml  README.md  order.fbs
libs/market_data/schema/: market_data.fbs
libs/market_data/src/: lib.rs  market_data.rs
libs/shared_mem/: Cargo.toml
libs/shared_mem/src/: lib.rs
libs/shared_memory/: Cargo.toml
libs/shared_memory/src/: lib.rs
