[package]
name = "exchange_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
io-uring = { workspace = true }
flatbuffers = "23.5.26"
shared_mem = { path = "../shared_mem" }
pyo3 = { version = "0.20", features = ["extension-module"] }
libc = "0.2"
anyhow = "1.0"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2"
nix = { version = "0.28", features = ["sched"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
ordered-float = "4.2"
crossbeam-queue = "0.3"

[dev-dependencies]
criterion = "0.5"
