[package]
name = "hft_bot"
version = "0.1.0"
edition = "2021"
authors = ["Afjol Raja <afjolraja97@gmail.com>"]
description = "High-Frequency Trading Bot Python Module (Rust Core)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/afjol97/Mr.AITrades"
keywords = ["hft", "trading", "market-data", "rust", "python"]
categories = ["finance", "library"]

[lib]
name = "hft_bot"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
shared_mem = { path = "../../libs/shared_mem" }
flatbuffers = "23.5.26"
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
serde_json = "1.0"
url = "2.2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1"

[build-dependencies]
maturin = "1.4"

[package.metadata.maturin]
name = "hft_bot"

[[bin]]
name = "binance_feed"
path = "src/bin/binance_feed.rs"

def on_quote(quote):
    print("on_quote called with:", quote)
    ...
